2011-11-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by Detlev Kraft:
	* doc/avr-studio-5-detlev-kraft.pdf: New file, added with
	Detlev's kind permission.  (Sorry, German language only.)

2011-11-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2.h: Implement a "cached PC" to avoid re-requesting
	the PC value from the ICE over and over again.
	* src/jtag2run.cc: Cache the PC value obtained from the ICE.
	For actions that are expecting a BREAK event, catch the
	expected event immediately, and use the PC value obtained
	from that event.  Fork out jtag2::expectEvent() into a method
	of its own to centralize the code for it (this logic used to
	live inside jtag2::eventLoop() before).

2011-11-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2io.cc (jtag2::doJtagCommand): Slightly improve the
	change from rev 240: don't attempt to retry definitively
	rejected commands; do not attempt to perform USB endpoint
	resets when the communication went fine but the result was
	not the expected one.

2011-11-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag.h: Add definition for MTYPE_XMEGA_APP_FLASH (thanks
	to Detlev's findings, again)
	* src/jtag2rw.cc: Implement MTYPE_XMEGA_APP_FLASH access, and
	fix MTYPE_XMEGA_REG access (must not enable programming mode).

2011-11-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Based on Detlev Kraft's guesses (many thanks to him again!),
	implement the new Xmega device descriptor setting for V7+
	firmware.
	* src/jtag.h: define xmega_device_desc_type
	* src/devdescr.cc: implement xmega_device_desc_type for
	ATxmega128A1(+revD)
	* src/jtag2io.cc: providing the firmware supports it, use
	xmega_device_desc_type rather than jtag2_device_desc_type when
	talking to an Xmega device

2011-11-23  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Attempt to implement some basic Xmega support for firmware
	revisions 7.x and above, i.e. AVR Studio 5 firmware.  Many thanks
	to Detlev Kraft for providing me with the details from his